--- a/README
+++ b/README
@@ -1,1 +1,200 @@
+Лабораторная работа: Анализ HTTP-запросов и методов
+
+Студент: Даниэль
+Дата выполнения: февраль 2026
+1. Инструкции по запуску проекта
+
+Данная лабораторная работа не требует установки программного обеспечения или запуска кода — это аналитическая работа в браузере.
+
+Необходимые инструменты:
+
+    Любой современный браузер (Chrome / Edge / Firefox / Opera)
+    Инструменты разработчика (DevTools): открыть нажатием F12 или Ctrl+Shift+I (Windows/Linux) / Cmd+Option+I (Mac)
+
+Порядок выполнения:
+
+    Открыть браузер
+    Нажать F12 → вкладка Network (Сеть)
+    Убедиться, что запись запросов включена (кнопка с красным кружком активна)
+    Выполнять переходы по указанным URL и анализировать запросы
+    Для составления запросов использовать Postman / curl / онлайн-инструменты типа reqbin.com или hoppscotch.io
+
+2. Описание лабораторной работы
+
+Цель работы:
+
+    Понять процесс загрузки веб-страницы и обмена данными между клиентом и сервером
+    Научиться работать с панелью Network в инструментах разработчика
+    Изучить основные HTTP-методы: GET, POST, PUT, DELETE
+    Понять назначение заголовков, параметров запроса, статус-кодов
+    Освоить базовое составление HTTP-запросов вручную
+
+Задания включали:
+
+    Анализ загрузки страницы Википедии (корректный и некорректный URL)
+    Анализ поискового запроса на Википедии
+    Анализ главной страницы популярного сайта (я выбрал https://github.com)
+    Ручное составление GET / POST / PUT запросов к тестовому серверу sandbox.usm.com
+    Анализ возможных ответов сервера и статус-кодов
+
+3. Краткая документация к проекту
+
+Проект представляет собой отчёт о лабораторной работе.
+Структура отчёта соответствует требованиям задания.
+
+Использованные инструменты анализа:
+
+    Google Chrome DevTools (Network panel)
+    Postman (для составления и отправки запросов в заданиях 4)
+
+Основные понятия, изученные в работе:
+
+    HTTP — протокол прикладного уровня для передачи гипертекста
+    Методы запроса (verbs): GET, POST, PUT, DELETE, PATCH и др.
+    Статус-коды: 200, 201, 400, 401, 403, 404, 500 и др.
+    Заголовки: User-Agent, Content-Type, Accept, Host и др.
+    Query parameters (?key=value)
+    Тело запроса (body) — для POST/PUT/PATCH
+
+4. Примеры использования проекта с приложением скриншотов или фрагментов кода
+
+Задание 1 — Анализ https://en.wikipedia.org/wiki/HTTP
+
+Первый запрос:
+
+    Метод: GET
+    URL: https://en.wikipedia.org/wiki/HTTP
+    Статус: 200 OK
+    Почему GET? Потому что мы запрашиваем чтение ресурса (страницы), не изменяя ничего на сервере.
+
+Дополнительные запросы при загрузке страницы:
+
+    CSS-файлы (style.css, ...), JS-файлы, изображения (logo Wikipedia), шрифты, иконки
+    Запросы к /w/load.php (динамическая загрузка модулей)
+
+Задание 1.9 — Некорректный URL https://en.wikipedia.org/wiki/HTTPdsfdfs
+
+Статус: 404 Not Found
+Причина: ресурс по указанному пути не существует на сервере.
+
+[Здесь должен быть скриншот Network с выделенным запросом 404 — добавь сам позже]
+
+Задание 2 — Поиск "browser" на Википедии
+
+Запрос поиска:
+
+    Метод: GET
+    URL: https://en.wikipedia.org/w/index.php?search=browser&title=Special%3ASearch&fulltext=1
+    Query-параметры:
+        search = browser
+        title = Special:Search
+        fulltext = 1
+        ns0 = 1 (и другие пространства имён)
+
+Почему GET? Поиск — это операция чтения, безопасная и идемпотентная, результаты можно кэшировать и делиться ссылкой.
+
+[Здесь должен быть скриншот запроса поиска — добавь сам позже]
+
+Задание 3 — Анализ https://github.com
+
+Главный запрос:
+
+    Метод: GET
+    Статус: 200 OK
+    Много дополнительных запросов: API-запросы к api.github.com, загрузка аватаров, JS-бандлы, аналитика (если включена)
+
+[Здесь должен быть скриншот Network для github.com — добавь сам позже]
+
+Задание 4 — Составление запросов (примеры в Postman / curl)
+
+    GET-запрос
+
+GET / HTTP/1.1
+Host: sandbox.usm.com
+User-Agent: Даниэль Иванов
+
+User-Agent — строка, идентифицирующая клиент (браузер, приложение, ОС). Используется для статистики, адаптации контента, блокировки ботов.
+
+    POST-запрос
+
+POST /cars HTTP/1.1
+Host: sandbox.usm.com
+Content-Type: application/x-www-form-urlencoded
+User-Agent: Даниэль Иванов
+
+make=Toyota&model=Corolla&year=2020
+
+или JSON-вариант
+
+POST /cars HTTP/1.1
+Host: sandbox.usm.com
+Content-Type: application/json
+User-Agent: Даниэль Иванов
+
+{"make":"Toyota","model":"Corolla","year":2020}
+
+    PUT-запрос
+
+PUT /cars/1 HTTP/1.1
+Host: sandbox.usm.com
+User-Agent: Даниэль Иванов
+Content-Type: application/json
+
+{
+  "make": "Toyota",
+  "model": "Corolla",
+  "year": 2021
+}
+
+Разница PUT и PATCH:
+
+    PUT — полная замена ресурса (идемпотентный). Клиент отправляет весь обновлённый объект.
+    PATCH — частичное обновление (можно изменить только одно поле, например только год).
+
+5. Ответы на контрольные вопросы
+
+Почему для загрузки страницы используется GET?
+Потому что это операция чтения данных без побочных эффектов. GET идемпотентен и безопасен.
+
+Что означает статус 200? 404?
+
+    200 OK — запрос успешно обработан, данные возвращены
+    404 Not Found — запрашиваемый ресурс не найден
+
+Какие ещё методы HTTP существуют и для чего они используются?
+
+    GET — получение данных
+    POST — создание ресурса / отправка данных
+    PUT — полная замена ресурса
+    DELETE — удаление ресурса
+    PATCH — частичное обновление ресурса
+    HEAD — только заголовки ответа (без тела)
+    OPTIONS — получение поддерживаемых методов для ресурса
+    TRACE — диагностика (редко используется)
+
+Возможные ответы сервера на POST /cars с form-urlencoded телом:
+
+    200 OK — ресурс успешно создан/обновлён (иногда используется вместо 201)
+    201 Created — ресурс успешно создан, часто с Location заголовком
+    400 Bad Request — неверный формат данных (нет make/model/year, неверные типы)
+    401 Unauthorized — требуется аутентификация
+    403 Forbidden — доступ запрещён (нет прав даже после аутентификации)
+    404 Not Found — endpoint /cars не существует (маловероятно)
+    500 Internal Server Error — ошибка на стороне сервера (баг, БД упала и т.д.)
+
+6. Список использованных источников
+
+    https://en.wikipedia.org/wiki/HTTP
+    https://developer.mozilla.org/en-US/docs/Web/HTTP/Methods
+    https://developer.mozilla.org/en-US/docs/Web/HTTP/Status
+    https://restfulapi.net/http-methods/
+    Chrome DevTools — Network panel (встроенная документация)
+    RFC 9110 — HTTP Semantics (основной стандарт)
+
+7. Дополнительные важные аспекты
+
+    Важно понимать разницу между идемпотентными (GET, PUT, DELETE) и неидемпотентными (POST) методами — это влияет на повторную отправку запросов при ошибках сети.
+    Современные сайты отправляют десятки-сотни запросов при загрузке одной страницы (CSS, JS, изображения, шрифты, API, трекинг).
+    User-Agent часто подделывают боты и парсеры — многие сайты блокируют подозрительные значения.
+    При использовании HTTPS заголовки и тело шифруются (кроме домена и порта).
 
