--- a/README
+++ b/README
@@ -2,199 +2,78 @@
 
 Студент: Даниэль
 Дата выполнения: февраль 2026
-1. Инструкции по запуску проекта
 
-Данная лабораторная работа не требует установки программного обеспечения или запуска кода — это аналитическая работа в браузере.
 
-Необходимые инструменты:
+Задание 2.
+1.    Переход на: https://en.wikipedia.org/wiki/Special:Search
 
-    Любой современный браузер (Chrome / Edge / Firefox / Opera)
-    Инструменты разработчика (DevTools): открыть нажатием F12 или Ctrl+Shift+I (Windows/Linux) / Cmd+Option+I (Mac)
+2.     Поиск по слову browser
 
-Порядок выполнения:
+        При вводе слова browser в поиске Wikipedia браузер отправляет серию GET-запросов (autocomplete).
+        Финальный запрос выглядит так:
 
-    Открыть браузер
-    Нажать F12 → вкладка Network (Сеть)
-    Убедиться, что запись запросов включена (кнопка с красным кружком активна)
-    Выполнять переходы по указанным URL и анализировать запросы
-    Для составления запросов использовать Postman / curl / онлайн-инструменты типа reqbin.com или hoppscotch.io
+        GET https://en.wikipedia.org/api.php
+        ?action=opensearch
+        &format=json
+        &formatversion=2
+        &search=browser
+        &namespace=0
+        &limit=10
 
-2. Описание лабораторной работы
+        GET — получить данные
+        api.php — API Википедии
+        Параметры:
+        action=opensearch — быстрый поиск по названиям статей
+        format=json — ответ в JSON
+        formatversion=2 — современная структура JSON
+        search=browser — что ищем
+        namespace=0 — только основные статьи
+        limit=10 — максимум 10 результатов
 
-Цель работы:
+3.      Поиск запроса в Network
+        Запрос найден во вкладке Network инструментов разработчика браузера.
+        Характерные признаки:
+        имя файла: api.php
+        параметры: action=opensearch
+        метод: GET
+        тип: fetch / xhr
+        Этот запрос отправляется при вводе текста в поле поиска Wikipedia.
 
-    Понять процесс загрузки веб-страницы и обмена данными между клиентом и сервером
-    Научиться работать с панелью Network в инструментах разработчика
-    Изучить основные HTTP-методы: GET, POST, PUT, DELETE
-    Понять назначение заголовков, параметров запроса, статус-кодов
-    Освоить базовое составление HTTP-запросов вручную
+4.      URL запроса
+        Для выполнения поиска используется URL:
+        https://en.wikipedia.org/api.php
+        Это основной endpoint MediaWiki API. Конкретное действие (поиск) задаётся параметрами запроса.
 
-Задания включали:
+        Метод запроса
+        Используется метод GET, потому что запрос предназначен только для получения данных, 
+        не изменяет состояние сервера, параметры удобно передаются в URL, запросы можно кешировать, 
+        и такой метод подходит для поисковых подсказок (autocomplete).
 
-    Анализ загрузки страницы Википедии (корректный и некорректный URL)
-    Анализ поискового запроса на Википедии
-    Анализ главной страницы популярного сайта (я выбрал https://github.com)
-    Ручное составление GET / POST / PUT запросов к тестовому серверу sandbox.usm.com
-    Анализ возможных ответов сервера и статус-кодов
+        Query Parameters
+        В запросе передаются следующие параметры:
+        action=opensearch — указывает API выполнить поисковый запрос с автодополнением.
+        format=json — задаёт формат ответа в виде JSON.
+        formatversion=2 — включает современную упрощённую структуру ответа JSON.
+        search=browser — поисковая строка, введённая пользователем.
+        namespace=0 — ограничивает поиск основными статьями Wikipedia.
+        limit=10 — задаёт максимальное количество возвращаемых результатов.
 
-3. Краткая документация к проекту
+5.    file:///C:/Users/jockj/Downloads/%D0%A1%D0%BD%D0%B8%D0%BC%D0%BE%D0%BA%20%D1%8D%D0%BA%D1%80%D0%B0%D0%BD%D0%B0%202026-02-13%20083944.pdf
 
-Проект представляет собой отчёт о лабораторной работе.
-Структура отчёта соответствует требованиям задания.
 
-Использованные инструменты анализа:
+Задание 3.
+        https://www.youtube.com
 
-    Google Chrome DevTools (Network panel)
-    Postman (для составления и отправки запросов в заданиях 4)
+        URL запросов
+        Используются разные URL доменов Google и YouTube (youtube.com, accounts.youtube.com, gstatic.com, ytimg.com).
+        Каждый домен отвечает за свою задачу: авторизация, ресурсы, аналитика, проверка соединения.
 
-Основные понятия, изученные в работе:
-
-    HTTP — протокол прикладного уровня для передачи гипертекста
-    Методы запроса (verbs): GET, POST, PUT, DELETE, PATCH и др.
-    Статус-коды: 200, 201, 400, 401, 403, 404, 500 и др.
-    Заголовки: User-Agent, Content-Type, Accept, Host и др.
-    Query parameters (?key=value)
-    Тело запроса (body) — для POST/PUT/PATCH
-
-4. Примеры использования проекта с приложением скриншотов или фрагментов кода
-
-Задание 1 — Анализ https://en.wikipedia.org/wiki/HTTP
-
-Первый запрос:
-
-    Метод: GET
-    URL: https://en.wikipedia.org/wiki/HTTP
-    Статус: 200 OK
-    Почему GET? Потому что мы запрашиваем чтение ресурса (страницы), не изменяя ничего на сервере.
-
-Дополнительные запросы при загрузке страницы:
-
-    CSS-файлы (style.css, ...), JS-файлы, изображения (logo Wikipedia), шрифты, иконки
-    Запросы к /w/load.php (динамическая загрузка модулей)
-
-Задание 1.9 — Некорректный URL https://en.wikipedia.org/wiki/HTTPdsfdfs
-
-Статус: 404 Not Found
-Причина: ресурс по указанному пути не существует на сервере.
-
-[Здесь должен быть скриншот Network с выделенным запросом 404 — добавь сам позже]
-
-Задание 2 — Поиск "browser" на Википедии
-
-Запрос поиска:
-
-    Метод: GET
-    URL: https://en.wikipedia.org/w/index.php?search=browser&title=Special%3ASearch&fulltext=1
-    Query-параметры:
-        search = browser
-        title = Special:Search
-        fulltext = 1
-        ns0 = 1 (и другие пространства имён)
-
-Почему GET? Поиск — это операция чтения, безопасная и идемпотентная, результаты можно кэшировать и делиться ссылкой.
-
-[Здесь должен быть скриншот запроса поиска — добавь сам позже]
-
-Задание 3 — Анализ https://github.com
-
-Главный запрос:
-
-    Метод: GET
-    Статус: 200 OK
-    Много дополнительных запросов: API-запросы к api.github.com, загрузка аватаров, JS-бандлы, аналитика (если включена)
-
-[Здесь должен быть скриншот Network для github.com — добавь сам позже]
-
-Задание 4 — Составление запросов (примеры в Postman / curl)
-
-    GET-запрос
-
-GET / HTTP/1.1
-Host: sandbox.usm.com
-User-Agent: Даниэль Иванов
-
-User-Agent — строка, идентифицирующая клиент (браузер, приложение, ОС). Используется для статистики, адаптации контента, блокировки ботов.
-
-    POST-запрос
-
-POST /cars HTTP/1.1
-Host: sandbox.usm.com
-Content-Type: application/x-www-form-urlencoded
-User-Agent: Даниэль Иванов
-
-make=Toyota&model=Corolla&year=2020
-
-или JSON-вариант
-
-POST /cars HTTP/1.1
-Host: sandbox.usm.com
-Content-Type: application/json
-User-Agent: Даниэль Иванов
-
-{"make":"Toyota","model":"Corolla","year":2020}
-
-    PUT-запрос
-
-PUT /cars/1 HTTP/1.1
-Host: sandbox.usm.com
-User-Agent: Даниэль Иванов
-Content-Type: application/json
-
-{
-  "make": "Toyota",
-  "model": "Corolla",
-  "year": 2021
-}
-
-Разница PUT и PATCH:
-
-    PUT — полная замена ресурса (идемпотентный). Клиент отправляет весь обновлённый объект.
-    PATCH — частичное обновление (можно изменить только одно поле, например только год).
-
-5. Ответы на контрольные вопросы
-
-Почему для загрузки страницы используется GET?
-Потому что это операция чтения данных без побочных эффектов. GET идемпотентен и безопасен.
-
-Что означает статус 200? 404?
-
-    200 OK — запрос успешно обработан, данные возвращены
-    404 Not Found — запрашиваемый ресурс не найден
-
-Какие ещё методы HTTP существуют и для чего они используются?
-
-    GET — получение данных
-    POST — создание ресурса / отправка данных
-    PUT — полная замена ресурса
-    DELETE — удаление ресурса
-    PATCH — частичное обновление ресурса
-    HEAD — только заголовки ответа (без тела)
-    OPTIONS — получение поддерживаемых методов для ресурса
-    TRACE — диагностика (редко используется)
-
-Возможные ответы сервера на POST /cars с form-urlencoded телом:
-
-    200 OK — ресурс успешно создан/обновлён (иногда используется вместо 201)
-    201 Created — ресурс успешно создан, часто с Location заголовком
-    400 Bad Request — неверный формат данных (нет make/model/year, неверные типы)
-    401 Unauthorized — требуется аутентификация
-    403 Forbidden — доступ запрещён (нет прав даже после аутентификации)
-    404 Not Found — endpoint /cars не существует (маловероятно)
-    500 Internal Server Error — ошибка на стороне сервера (баг, БД упала и т.д.)
-
-6. Список использованных источников
-
-    https://en.wikipedia.org/wiki/HTTP
-    https://developer.mozilla.org/en-US/docs/Web/HTTP/Methods
-    https://developer.mozilla.org/en-US/docs/Web/HTTP/Status
-    https://restfulapi.net/http-methods/
-    Chrome DevTools — Network panel (встроенная документация)
-    RFC 9110 — HTTP Semantics (основной стандарт)
-
-7. Дополнительные важные аспекты
-
-    Важно понимать разницу между идемпотентными (GET, PUT, DELETE) и неидемпотентными (POST) методами — это влияет на повторную отправку запросов при ошибках сети.
-    Современные сайты отправляют десятки-сотни запросов при загрузке одной страницы (CSS, JS, изображения, шрифты, API, трекинг).
-    User-Agent часто подделывают боты и парсеры — многие сайты блокируют подозрительные значения.
-    При использовании HTTPS заголовки и тело шифруются (кроме домена и порта).
-
+        Методы запросов
+        GET — загрузка страниц и статических ресурсов (скрипты, изображения).
+        POST — отправка данных на сервер (логирование событий, обновление cookies).
+        HEAD — проверка соединения без загрузки данных.
+        Назначение параметров и запросов
+        Запросы к RotateCookies — управление cookies и безопасностью аккаунта.
+        Запросы к log_event — отправка статистики и пользовательских событий.
+        Запросы к generate_204 — проверка наличия интернет-соединения.
+        Запросы к gstatic и ytimg — загрузка статических файлов и изображений.
