--- a/README
+++ b/README
@@ -62,18 +62,37 @@
 
 
 Задание 3.
-        https://www.youtube.com
+        https://www.google.com/
 
-        URL запросов
-        Используются разные URL доменов Google и YouTube (youtube.com, accounts.youtube.com, gstatic.com, ytimg.com).
-        Каждый домен отвечает за свою задачу: авторизация, ресурсы, аналитика, проверка соединения.
+        Это служебные запросы Google при загрузке страницы.
+        Основные группы: аналитика, интерфейс, шрифты, изображения, JS-модули.
 
-        Методы запросов
-        GET — загрузка страниц и статических ресурсов (скрипты, изображения).
-        POST — отправка данных на сервер (логирование событий, обновление cookies).
-        HEAD — проверка соединения без загрузки данных.
-        Назначение параметров и запросов
-        Запросы к RotateCookies — управление cookies и безопасностью аккаунта.
-        Запросы к log_event — отправка статистики и пользовательских событий.
-        Запросы к generate_204 — проверка наличия интернет-соединения.
-        Запросы к gstatic и ytimg — загрузка статических файлов и изображений.
+1.      Аналитика и проверка состояния
+        POST www.google.com/gen_204
+        Используется для логирования событий и проверки состояния страницы.
+        204 означает «без содержимого».
+        Метод POST, потому что данные отправляются на сервер.
+
+2.      Встраиваемые сервисы Google
+        GET ogs.google.com/app
+        Загрузка встроенных сервисов Google (оверлеи, элементы интерфейса).
+        GET, так как просто запрашивается документ.
+
+3.      JavaScript-модули
+        GET www.gstatic.com/m=
+        Загрузка JS-модулей Google.
+        Используется CDN gstatic.
+        Большинство файлов берётся из кеша → ускорение загрузки.
+
+4.      Шрифты
+        GET fonts.gstatic.com/*.woff2
+        Загрузка веб-шрифтов.
+        Формат woff2 — оптимизирован для веба.
+        Почти все запросы кешированы.
+
+5.      Изображения
+        GET lh3.googleusercontent.com, ssl.gstatic.com
+        Аватары и служебные иконки.
+        Обычные GET-запросы, загружаются из кеша.
+
+        file:///C:/Users/jockj/Downloads/%D0%A1%D0%BD%D0%B8%D0%BC%D0%BE%D0%BA%20%D1%8D%D0%BA%D1%80%D0%B0%D0%BD%D0%B0%202026-02-13%20085519.pdf
