--- a/README
+++ b/README
@@ -4,6 +4,70 @@
 Дата выполнения: февраль 2026
 
 
+Задание 1.
+        Откройте сайт Wikipedia:
+        https://en.wikipedia.org/wiki/HTTP
+
+        Прочитайте статью и обратите внимание на основные моменты, связанные с HTTP-запросами.
+        2.1 HTTP — это протокол, через который происходит обмен данными между браузером и сервером.
+        2.2 Вся работа строится по схеме «запрос → ответ».
+        2.3 HTTP-метод определяет, какое действие выполняется (GET, POST и т.д.).
+        2.4 Сервер возвращает клиенту код статуса и данные.
+        2.5 HTTP-запрос включает в себя:
+
+        метод,
+        заголовки,
+        тело (если оно требуется).
+
+        Откройте инструменты разработчика в браузере (обычно с помощью клавиши F12 или пункта Inspect в контекстном меню).
+        Перейдите на вкладку Network (Сеть).
+        Обновите страницу Wikipedia.
+        изображение__________________________________________________________
+        Найдите первый запрос, соответствующий загрузке страницы HTTP, и проанализируйте его по следующим параметрам.
+
+        URL запроса
+        https://ru.wikipedia.org/wiki/HTTP
+
+        Метод запроса. Почему используется именно этот метод?
+        Для загрузки страницы используется метод GET, так как браузер запрашивает данные с сервера без изменения его состояния.
+        Статус ответа. Что означает этот статус?
+        Код 200 OK означает, что запрос был успешно выполнен, и сервер корректно вернул страницу.
+        Заголовки запроса и ответа. Какие заголовки присутствуют и что они означают?
+        Host: ru.wikipedia.org — адрес сервера, к которому выполняется запрос
+        User-Agent — информация о браузере и операционной системе
+        Accept — типы данных, которые клиент способен принять
+        Accept-Language — предпочтительный язык (ru)
+        Accept-Encoding — поддерживаемые способы сжатия (gzip, br и др.)
+        Cookie — данные пользовательской сессии
+        Referer — страница, с которой был выполнен переход
+        Connection: keep-alive — соединение не закрывается после ответа
+        Есть ли тело запроса или ответа? Если да, что в нём содержится?
+        Тело запроса отсутствует, так как GET-запросы обычно не передают данные в теле.
+        Тело ответа присутствует — это HTML-код страницы Wikipedia, сжатый gzip, размером около 58 535 байт, тип text/html.
+
+изображение
+изображение________________________
+
+7. Какие ещё запросы были отправлены при загрузке страницы и почему?
+При загрузке страницы браузер отправляет не только основной запрос за HTML-документом, но и дополнительные запросы к связанным ресурсам.
+
+Отправляются следующие типы запросов:
+
+CSS-файлы — для оформления страницы (стили, шрифты, расположение элементов)
+
+JavaScript-файлы — для интерактивности и динамической логики
+
+Изображения — логотипы, иконки, изображения в статье
+
+Шрифты — для корректного отображения текста
+
+favicon.ico — иконка сайта во вкладке браузера
+
+API-запросы — для служебных данных (например, статистики или настроек)
+
+Это происходит потому, что HTML-страница содержит ссылки на внешние ресурсы (через теги <link>, <script>, <img> и другие), и браузер автоматически загружает их отдельными HTTP-запросами для полного отображения страницы.
+
+
 Задание 2.
 1.    Переход на: https://en.wikipedia.org/wiki/Special:Search
 
