--- a/README
+++ b/README
@@ -5,10 +5,10 @@
 
 
 Задание 1.
-        Откройте сайт Wikipedia:
+1.        Откройте сайт Wikipedia:
         https://en.wikipedia.org/wiki/HTTP
 
-        Прочитайте статью и обратите внимание на основные моменты, связанные с HTTP-запросами.
+2.        Прочитайте статью и обратите внимание на основные моменты, связанные с HTTP-запросами.
         2.1 HTTP — это протокол, через который происходит обмен данными между браузером и сервером.
         2.2 Вся работа строится по схеме «запрос → ответ».
         2.3 HTTP-метод определяет, какое действие выполняется (GET, POST и т.д.).
@@ -19,20 +19,20 @@
         заголовки,
         тело (если оно требуется).
 
-        Откройте инструменты разработчика в браузере (обычно с помощью клавиши F12 или пункта Inspect в контекстном меню).
-        Перейдите на вкладку Network (Сеть).
-        Обновите страницу Wikipedia.
-        изображение__________________________________________________________
-        Найдите первый запрос, соответствующий загрузке страницы HTTP, и проанализируйте его по следующим параметрам.
+3.        Откройте инструменты разработчика в браузере (обычно с помощью клавиши F12 или пункта Inspect в контекстном меню).
+4.        Перейдите на вкладку Network (Сеть).
+5.        Обновите страницу Wikipedia.
+
+6.        Найдите первый запрос, соответствующий загрузке страницы HTTP, и проанализируйте его по следующим параметрам.
 
         URL запроса
         https://ru.wikipedia.org/wiki/HTTP
 
-        Метод запроса. Почему используется именно этот метод?
+      -  Метод запроса. Почему используется именно этот метод?
         Для загрузки страницы используется метод GET, так как браузер запрашивает данные с сервера без изменения его состояния.
-        Статус ответа. Что означает этот статус?
+      -  Статус ответа. Что означает этот статус?
         Код 200 OK означает, что запрос был успешно выполнен, и сервер корректно вернул страницу.
-        Заголовки запроса и ответа. Какие заголовки присутствуют и что они означают?
+      -  Заголовки запроса и ответа. Какие заголовки присутствуют и что они означают?
         Host: ru.wikipedia.org — адрес сервера, к которому выполняется запрос
         User-Agent — информация о браузере и операционной системе
         Accept — типы данных, которые клиент способен принять
@@ -45,27 +45,18 @@
         Тело запроса отсутствует, так как GET-запросы обычно не передают данные в теле.
         Тело ответа присутствует — это HTML-код страницы Wikipedia, сжатый gzip, размером около 58 535 байт, тип text/html.
 
-изображение
-изображение________________________
+        file:///C:/Users/jockj/Downloads/%D0%A1%D0%BD%D0%B8%D0%BC%D0%BE%D0%BA%20%D1%8D%D0%BA%D1%80%D0%B0%D0%BD%D0%B0%202026-02-13%20085519-1.pdf
 
-7. Какие ещё запросы были отправлены при загрузке страницы и почему?
-При загрузке страницы браузер отправляет не только основной запрос за HTML-документом, но и дополнительные запросы к связанным ресурсам.
-
-Отправляются следующие типы запросов:
-
-CSS-файлы — для оформления страницы (стили, шрифты, расположение элементов)
-
-JavaScript-файлы — для интерактивности и динамической логики
-
-Изображения — логотипы, иконки, изображения в статье
-
-Шрифты — для корректного отображения текста
-
-favicon.ico — иконка сайта во вкладке браузера
-
-API-запросы — для служебных данных (например, статистики или настроек)
-
-Это происходит потому, что HTML-страница содержит ссылки на внешние ресурсы (через теги <link>, <script>, <img> и другие), и браузер автоматически загружает их отдельными HTTP-запросами для полного отображения страницы.
+        Какие ещё запросы были отправлены при загрузке страницы и почему?
+        При загрузке страницы браузер отправляет не только основной запрос за HTML-документом, но и дополнительные запросы к связанным ресурсам.
+        Отправляются следующие типы запросов:
+        CSS-файлы — для оформления страницы (стили, шрифты, расположение элементов)
+        JavaScript-файлы — для интерактивности и динамической логики
+        Изображения — логотипы, иконки, изображения в статье
+        Шрифты — для корректного отображения текста
+        favicon.ico — иконка сайта во вкладке браузера
+        API-запросы — для служебных данных (например, статистики или настроек)      
+        Это происходит потому, что HTML-страница содержит ссылки на внешние ресурсы (через теги <link>, <script>, <img> и другие), и браузер автоматически загружает их отдельными HTTP-запросами для полного отображения страницы.
 
 
 Задание 2.
@@ -160,3 +151,60 @@ API-запросы — для служебных данных (например,
         Обычные GET-запросы, загружаются из кеша.
 
         file:///C:/Users/jockj/Downloads/%D0%A1%D0%BD%D0%B8%D0%BC%D0%BE%D0%BA%20%D1%8D%D0%BA%D1%80%D0%B0%D0%BD%D0%B0%202026-02-13%20085519.pdf
+
+
+Задание 3.
+1.      GET-запрос на http://sandbox.usm.com с User-Agent (имя + фамилия)
+
+        GET / HTTP/1.1 Host: sandbox.usm.com User-Agent: Daniel  Rusnak
+        Что такое User-Agent?
+
+        User-Agent — заголовок, который сообщает серверу, кто отправляет запрос (браузер/приложение, ОС, версия).
+        Используется для логирования, аналитики, отладки, иногда — для выдачи разного контента под разные клиенты.
+
+2.      POST-запрос на http://sandbox.usm.com/cars с параметрами в теле
+        Вариант JSON (чаще в API)
+
+        POST /cars HTTP/1.1 Host: sandbox.usm.com Content-Type: application/json User-Agent: Daniel Rusnak
+
+        { "make": "Toyota", "model": "Corolla", "year": 2020 }
+        Какие еще методы HTTP существуют?
+
+    GET — получить ресурс
+    POST — создать ресурс / отправить данные на обработку
+    PUT — полностью заменить ресурс (создать, если отсутствует — зависит от API)
+    PATCH — частично изменить ресурс
+    DELETE — удалить ресурс
+    HEAD — как GET, но без тела ответа (только заголовки)
+    OPTIONS — узнать, какие методы/опции поддерживает сервер для ресурса
+
+3.      PUT-запрос на http://sandbox.usm.com/cars/1 (JSON + User-Agent)
+
+PUT /cars/1 HTTP/1.1 Host: sandbox.usm.com User-Agent: Eugene Ivanov Content-Type: application/json
+
+{ "make": "Toyota", "model": "Corolla", "year": 2021 }
+Разница PATCH и PUT
+
+    PUT — полная замена ресурса (обычно нужно отправлять весь объект целиком).
+    PATCH — частичное изменение (можно отправить только изменяемые поля).
+
+4.        Пример ответа сервера на запрос
+
+Запрос: POST /cars HTTP/1.1 Host: sandbox.com Content-Type: application/json User-Agent: John Doe
+
+model=Corolla&make=Toyota&year=2020
+Один из возможных ответов (успешное создание)
+
+HTTP/1.1 201 Created Content-Type: application/json
+
+{ "id": 42, "make": "Toyota", "model": "Corolla", "year": 2020 }
+Когда сервер может вернуть коды 200/201/400/401/403/404/500
+
+    200 OK — сервер обработал запрос, но не создавал новый ресурс (например, вернул результат обработки).
+    201 Created — создан новый ресурс (новая запись авто).
+    400 Bad Request — неверные данные/формат (например, year не число, тело невалидно, отсутствуют поля).
+    401 Unauthorized — нужна аутентификация (нет/неверный токен, нет логина).
+    403 Forbidden — аутентификация есть, но нет прав (например, нельзя создавать машины).
+    404 Not Found — неправильный путь (например, /cars не существует на этом сервере).
+    500 Internal Server Error — ошибка на сервере (падение приложения, ошибка БД, необработанное исключение).
+
